--- a/index.html
+++ b/index.html
@@ -1123,14 +1123,14 @@
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Second Brain</h3>
-                    <p class="project-desc">Mental health wellness app for teenagers and professionals to reduce stress.</p>
+                    <p class="project-desc">A tasks-taking app that allows you to create, edit, and organize your tasks with ease.</p>
                     <div class="project-tags">
                         <span class="tag">Flutter</span>
                         <span class="tag">Dart</span>
                         <span class="tag">Firebase</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://drive.google.com/file/d/1PvdVdH8WRU1p80EcVr5YlwUIb0UgUlOr/view?usp=sharing" target="_blank" class="project-link">
+                        <a href="https://drive.google.com/file/d/1OWfUT-LekSFvlq7GjrWHOlTq3QTo956x/view?usp=drivesdk" target="_blank" class="project-link">
                             <i class="fas fa-external-link-alt"></i> Live Demo
                         </a>
                         <a href="https://github.com/HNS-06/Second_Brain.git" target="_blank" class="project-link">
